Fix re-enabling of editable

--- a/examples/test.html
+++ b/examples/test.html
@@ -23,7 +23,8 @@
         jQuery('.editable').hallo({
           plugins: {
             'halloformat': {}
-          }
+          },
+          editable: true
         });
       });
       jQuery('#disable').button().click(function() {
