--- a/examples/test.html
+++ b/examples/test.html
@@ -18,6 +18,7 @@
     </div>
     <button id="enable">Enable</button>
     <button id="disable">Disable</button>
+    <p id="modified">Editables have not been modified</p>
     <script>
       jQuery('#enable').button().click(function() {
         jQuery('.editable').hallo({
@@ -25,6 +26,9 @@
             'halloformat': {}
           },
           editable: true
+        });
+        jQuery('.editable').bind('hallomodified', function(event, data) {
+            jQuery('#modified').html("Editables modified");
         });
       });
       jQuery('#disable').button().click(function() {
