--- a/examples/test.html
+++ b/examples/test.html
@@ -1,14 +1,18 @@
 <html>
   <head>
     <link rel="stylesheet" href="Aristo/jquery-ui-1.8.7.custom.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
+    <script src="http://localhost/js/jquery.min.js"></script>
+    <script src="http://localhost/js/jquery-ui.min.js"></script>
     <script src="hallo.js"></script>
     <script src="format.js"></script>
+    <script src="headings.js"></script>
+    <script src="justify.js"></script>
+    <script src="lists.js"></script>
+    <script src="linkimg.js"></script>
     <title>Hallo example</title>
   </head>
   <body>
-    <h1 class="editable">Foo bar</h1>
+    <h1 class="editable">Hello World</h1>
     <div class="editable">
       <p>
         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
@@ -16,6 +20,13 @@
       <p>
         Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
       </p>
+
+      <table>
+          <tr>
+              <td width="70%">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</td>
+              <td width="30%">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</td>
+          </tr>
+      </table>
     </div>
     <button id="enable">Enable</button>
     <button id="disable">Disable</button>
@@ -24,7 +35,11 @@
       jQuery('#enable').button().click(function() {
         jQuery('.editable').hallo({
           plugins: {
-            'halloformat': {}
+            'halloformat': {},
+            'halloheadings': {},
+            'hallojustify': {},
+            'hallolists': {},
+            'hallolinkimg': {}
           },
           editable: true
         });
