Add Redo/Undo Plugin

--- a/examples/test.html
+++ b/examples/test.html
@@ -9,6 +9,7 @@
     <script src="justify.js"></script>
     <script src="lists.js"></script>
     <script src="linkimg.js"></script>
+    <script src="reundo.js"></script>
     <title>Hallo example</title>
   </head>
   <body>
@@ -39,7 +40,8 @@
             'halloheadings': {},
             'hallojustify': {},
             'hallolists': {},
-            'hallolinkimg': {}
+            'hallolinkimg': {},
+            'halloreundo': {}
           },
           editable: true
         });
