Fix jQuery loading messed up in 722718772da63b6c49cfdca820a5eaaee0b485f2

--- a/examples/test.html
+++ b/examples/test.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="Aristo/jquery-ui-1.8.7.custom.css" />
-    <script src="http://localhost/js/jquery.min.js"></script>
-    <script src="http://localhost/js/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
     <script src="hallo.js"></script>
     <script src="format.js"></script>
     <script src="headings.js"></script>
