Add a class for Hallo toolbars

--- a/examples/test.html
+++ b/examples/test.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="Aristo/jquery-ui-1.8.7.custom.css" />
+    <link rel="stylesheet" href="hallo.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
     <script src="hallo.js"></script>
