Renamed linkimg plugin to link

--- a/examples/test.html
+++ b/examples/test.html
@@ -44,7 +44,7 @@
             'halloheadings': {},
             'hallojustify': {},
             'hallolists': {},
-            'hallolinkimg': {},
+            'hallolink': {},
             'halloreundo': {}
           },
           editable: true
