compiled files to js

--- a/examples/test.html
+++ b/examples/test.html
@@ -9,7 +9,7 @@
     <script src="headings.js"></script>
     <script src="justify.js"></script>
     <script src="lists.js"></script>
-    <script src="linkimg.js"></script>
+    <script src="link.js"></script>
     <script src="reundo.js"></script>
     <title>Hallo example</title>
   </head>
