--- a/examples/test-annotate.html
+++ b/examples/test-annotate.html
@@ -5,13 +5,6 @@
     <link rel="stylesheet" href="annotate.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-    <script src="hallo.js"></script>
-    <script src="format.js"></script>
-    <script src="headings.js"></script>
-    <script src="justify.js"></script>
-    <script src="lists.js"></script>
-    <script src="link.js"></script>
-    <script src="reundo.js"></script>
 
     <script src="underscoreJS/underscore.min.js"></script>
     <script src="backboneJS/backbone.min.js"></script>
@@ -19,7 +12,8 @@
 
     <script src="vie-latest.js"></script>
     <script src="vie-annotate.js"></script>
-    <script src="annotate.js"></script>
+    <script src="hallo.js"></script>
+
     <title>Hallo example</title>
   </head>
   <body>
@@ -56,6 +50,9 @@ Turkey, known officially as the Republic of Turkey, is a Eurasian country that s
         });
         jQuery('.editable').bind('hallounselected', function(event, data) {
             jQuery('#modified').html("Selection removed");
+        });
+        jQuery('.editable').bind('hallorestored', function(event, data) {
+            jQuery('#modified').html("restored");
         });
       });
       jQuery('#disable').button().click(function() {
