--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
         <title>Hallo &mdash; Distraction-free writing for the Web</title>
         <link rel="stylesheet" href="css/hallo.css" />
-		<link type="text/css" href="css/pepper-grinder/jquery-ui-1.8.14.custom.css" rel="stylesheet" />
-		<script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
-		<script type="text/javascript" src="js/jquery-ui-1.8.14.custom.min.js"></script>
-        <script type="text/javascript" src="js/hallo/hallo.js"></script>
-        <script type="text/javascript" src="js/hallo/format.js"></script>
+        <link href="css/font-awesome/css/font-awesome.css" rel="stylesheet" />
+		    <link type="text/css" href="css/jquery-ui-bootstrap/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
+		    <script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
+		    <script type="text/javascript" src="js/jquery-ui-1.8.14.custom.min.js"></script>
+        <script type="text/javascript" src="js/hallo.js"></script>
     </head>
     <body prefix="doap: http://usefulinc.com/ns/doap#" about="http://bergie.github.com/hallo/" typeof="doap:Project">
         <header>
@@ -57,7 +57,11 @@
         <script>
             jQuery('.editable').hallo({
                 plugins: {
-                    'halloformat': {}
+                    'halloformat': {},
+                    'halloblock': {},
+                    'hallojustify': {},
+                    'hallolists': {},
+                    'halloreundo': {}
                 }
             });
         </script>
