--- a/markdown.html
+++ b/markdown.html
@@ -8,6 +8,7 @@
 		    <link type="text/css" href="css/jquery-ui-bootstrap/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
 		    <script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui-1.8.14.custom.min.js"></script>
+        <script type="text/javascript" src="js/showdown.js"></script>
         <script type="text/javascript" src="js/to-markdown.js"></script>
         <script type="text/javascript" src="js/hallo.js"></script>
     </head>
@@ -26,7 +27,7 @@
                 Actually, this text you're reading has Hallo loaded. To try it out, just click here and start writing. If you want to make more comprehensive modifications, just select some text.
             </p>
         </article>
-        <textarea disabled="disabled" id="source">
+        <textarea id="source">
         </textarea>
         <footer>
             <p>Hallo is <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">free software</a> developed by <a href="http://bergie.iki.fi/">Henri Bergius</a></span> for the <a href="http://iks-project.eu/">IKS Project</a> and co-funded by the European Union</p>
@@ -60,19 +61,43 @@
                     }
                 }
 
-                // Method that converts the HTML contents to Markdown
-                var showSource = function(content) {
+                var markdownize = function(content) {
                     var html = content.split("\n").map($.trim).filter(function(line) { 
                         return line != "" }
                     ).join("\n");
-                    var markdown = toMarkdown(html);
-                    jQuery('#source').html(markdown);
+                    return toMarkdown(html);
                 };
+
+                var converter = new Showdown.converter();
+                var htmlize = function(content) {
+                    return converter.makeHtml(content);
+                }
+
+                // Method that converts the HTML contents to Markdown
+                var showSource = function(content) {
+                    var markdown = markdownize(content);
+                    if (jQuery('#source').get(0).value == markdown) {
+                        return;
+                    }
+                    jQuery('#source').get(0).value = markdown;
+                  };
+
+
+                var updateHtml = function(content) {
+                    if (markdownize(jQuery('.editable').html()) == content) {
+                        return;
+                    }
+                    var html = htmlize(content);
+                    jQuery('.editable').html(html); 
+                }
 
                 // Update Markdown every time content is modified
                 jQuery('.editable').bind('hallomodified', function(event, data) {
                     showSource(data.content);
 
+                });
+                jQuery('#source').bind('keyup', function() {
+                    updateHtml(this.value);
                 });
                 showSource(jQuery('.editable').html());
             }); 
