Notice that the Markdown is also editable

--- a/markdown.html
+++ b/markdown.html
@@ -26,7 +26,11 @@
             <p>
                 Actually, this text you're reading has Hallo loaded. To try it out, just click here and start writing. If you want to make more comprehensive modifications, just select some text.
             </p>
+            <p>
+                <strong>Note:</strong> you can also edit the Markdown source below
+            </p>
         </article>
+
         <textarea id="source">
         </textarea>
         <footer>
