remove annotate dependencies and load them on the demo from szabyg.github.com/annotate.js/lib...

--- a/examples/test-annotate.html
+++ b/examples/test-annotate.html
@@ -9,12 +9,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
 
-    <script src="underscoreJS/underscore.min.js"></script>
-    <script src="backboneJS/backbone.min.js"></script>
-    <script src="rdfquery/latest/jquery.rdfquery.min.js"></script>
+    <script src="http://szabyg.github.com/annotate.js/lib/underscore-min.js"></script>
+    <script src="http://szabyg.github.com/annotate.js/lib/backbone-min.js"></script>
+    <script src="http://szabyg.github.com/annotate.js/lib/jquery.rdfquery.min.js"></script>
 
-    <script src="vie-latest.js"></script>
-    <script src="vie-annotate.js"></script>
+    <script src="http://szabyg.github.com/annotate.js/lib/vie/vie-latest.js"></script>
+    <script src="http://szabyg.github.com/annotate.js/lib/annotate.js"></script>
 
     <script src="hallo.js"></script>
 
