--- a/markdown.html
+++ b/markdown.html
@@ -8,15 +8,16 @@
 		    <link type="text/css" href="css/jquery-ui-bootstrap/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
 		    <script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui-1.8.14.custom.min.js"></script>
-        <script type="text/javascript" src="js/showdown.js"></script>
-        <script type="text/javascript" src="js/to-markdown.js"></script>
+        <script type="text/javascript" src="js/markdown/showdown.js"></script>
+        <script type="text/javascript" src="js/markdown/to-markdown.js"></script>
         <script type="text/javascript" src="js/hallo.js"></script>
     </head>
     <body>
         <header>
             <a href="https://github.com/bergie/hallo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://d3nwyuy0nl342s.cloudfront.net/img/71eeaab9d563c2b3c590319b398dd35683265e85/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub"></a>
         </header>
-        <article class="editable">
+        <article>
+          <div class="editable">
             <h1>Hallo &mdash; editing Markdown in WYSIWYG</h1>
 
             <p>
@@ -29,6 +30,7 @@
             <p>
                 <strong>Note:</strong> you can also edit the Markdown source below
             </p>
+           </div>
         </article>
 
         <textarea id="source">
