--- a/examples/showalways.html
+++ b/examples/showalways.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="hallo.css" />
     <link rel="stylesheet" href="image.css" />
     <link rel="stylesheet" href="fontawesome/css/font-awesome.css" charset="utf-8" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
+    <script src="../deps/jquery-1.7.1.min.js"></script>
+    <script src="../deps/jquery-ui-1.8.18.custom.min.js"></script>
     <script src="hallo.js"></script>
     <title>Hallo example</title>
   </head>
