--- a/index.html
+++ b/index.html
@@ -1,69 +1,36 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Hallo &mdash; Distraction-free writing for the Web</title>
-        <link rel="stylesheet" href="css/hallo.css" />
-        <link href="css/font-awesome/css/font-awesome.css" rel="stylesheet" />
-		    <link type="text/css" href="css/jquery-ui-bootstrap/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
-		    <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
-		    <script type="text/javascript" src="js/jquery-ui-1.8.18.custom.min.js"></script>
-        <script type="text/javascript" src="js/hallo.js"></script>
-    </head>
-    <body prefix="doap: http://usefulinc.com/ns/doap#" about="http://hallojs.org/" typeof="doap:Project">
-        <header>
-            <a href="https://github.com/bergie/hallo" rel="doap:homepage"><img style="position: absolute; top: 0; right: 0; border: 0;" src="./img/fork-me.png" alt="Fork me on GitHub"></a>
-        </header>
-        <article>
-            <h1 class="editable"><span property="doap:name">Hallo</span> &mdash; <span property="doap:shortdesc">distraction-free writing for the web</span></h1>
+---
+layout: default
+title: "Distraction-free Rich Text Editor for the Web"
+includes_js:
+  - /js/frontpage/editor.js
+vocab: "http://usefulinc.com/ns/doap#" 
+---
+<article about="http://hallojs.org/#hallo" typeof="Project">
+  <h1 class="editable"><span property="name">Hallo</span> &mdash; <span property="shortdesc">distraction-free writing for the web</span></h1>
 
-            <div property="doap:description" class="editable">
-                <p>
-                    Hallo is the simplest web editor imaginable. Instead of cluttered forms or toolbars, you edit your web content as it is. Just you, your web design, and your content.
-                </p>
+  <div property="description" class="editable">
+    <p>
+    Hallo is the simplest web editor imaginable. Instead of cluttered forms or toolbars, you edit your web content as it is. Just you, your web design, and your content.
+    </p>
 
-                <p>
-                    Actually, this text you're reading has Hallo loaded. To try it out, just click here and start writing. If you want to make more comprehensive modifications, just select some text.
-                </p>
+    <p>
+    Actually, this text you're reading has Hallo loaded. To try it out, just click here and start writing. If you want to make more comprehensive modifications, just select some text.
+    </p>
 
-                <!--
-                TODO in 1.0
-                <p>
-                    Adding images and other files is just as easy. Grab a file from your file manager and drag it here. Or if you want to include social media, like YouTube videos or pictures from Flickr, just paste a URL here and it will be included.
-                </p>
-                -->
+    <h2>What Hallo is not</h2>
 
-                <h2>What Hallo is not</h2>
+    <p>
+    Hallo is not <a href="http://tinymce.moxiecode.com/">TinyMCE</a> or <a href="http://aloha-editor.org/">Aloha Editor</a>. Hallo isn't Microsoft Word, or even Google Docs. It is just the most simple and pleasurable web writing tool imaginable, available to be included into any web application under the liberal MIT open source license.
+    </p>
 
-                <p>
-                    Hallo is not <a href="http://tinymce.moxiecode.com/">TinyMCE</a> or <a href="http://aloha-editor.org/">Aloha Editor</a>. Hallo isn't Microsoft Word, or even Google Docs. It is just the most simple and pleasurable web writing tool imaginable, available to be included into any web application under the liberal MIT open source license.
-                </p>
+    <h2>Developing Hallo</h2>
 
-                <h2>Developing Hallo</h2>
+    <p>
+    Hallo is still in the early stages of its life and not quite yet ready for real-world use. If you're interested in contributing, simply fork the <a href="https://github.com/bergie/hallo">Hallo repository on GitHub</a> and send <a href="http://help.github.com/pull-requests/">pull requests</a>. Make sure to check out the <a href="https://github.com/bergie/hallo/issues" rel="bug-database">current list of issues</a>.
+    </p>
 
-                <p>
-                    Hallo is still in the early stages of its life and not quite yet ready for real-world use. If you're interested in contributing, simply fork the <a href="https://github.com/bergie/hallo">Hallo repository on GitHub</a> and send <a href="http://help.github.com/pull-requests/">pull requests</a>. Make sure to check out the <a href="https://github.com/bergie/hallo/issues" rel="doap:bug-database">current list of issues</a>.
-                </p>
-
-                <p>
-                    The Hallo editor operates as a <a href="http://jqueryui.com/">jQuery UI</a> plugin and has been written in <a href="http://jashkenas.github.com/coffee-script/"><span about="http://bergie.github.com/hallo/" property="doap:programming-language">CoffeeScript</span></a> for the sake of simplicity. CoffeeScript is a beautiful little language that compiles into JavaScript.
-                </p>
-            </div>
-        </article>
-        <footer prefix="foaf: http://xmlns.com/foaf/0.1/">
-            <p>Hallo is <a href="http://www.opensource.org/licenses/mit-license.php" rel="doap:license">free software</a> developed by <span property="doap:maintainer"><a rel="foaf:homepage" typeof="foaf:Person" href="http://bergie.iki.fi/" property="foaf:name">Henri Bergius</a></span> for the <a href="http://iks-project.eu/">IKS Project</a> and co-funded by the European Union</p>
-        </footer>
-
-        <script>
-            jQuery('.editable').hallo({
-                plugins: {
-                    'halloformat': {},
-                    'halloblock': {},
-                    'hallojustify': {},
-                    'hallolists': {},
-                    'halloreundo': {}
-                }
-            });
-        </script>
-    </body>
-</html>
+    <p>
+    The Hallo editor operates as a <a href="http://jqueryui.com/">jQuery UI</a> plugin and has been written in <a href="http://coffeescript.org/"><span about="http://hallojs.org/" property="programming-language">CoffeeScript</span></a> for the sake of simplicity. CoffeeScript is a beautiful little language that compiles into JavaScript.
+    </p>
+  </div>
+</article>
