New widget: an editability indicator

--- a/examples/showalways.html
+++ b/examples/showalways.html
@@ -74,6 +74,7 @@
       jQuery('#enable').button().click(function() {
         jQuery('.editable').hallo({
           plugins: {
+            'halloindicator': {},
             'halloformat': {},
             'halloheadings': {},
             'hallojustify': {},
