Major refactoring: move toolbars to own widgets, initialize toolbar on first activation

--- a/examples/fixed.html
+++ b/examples/fixed.html
@@ -93,7 +93,7 @@
             }
           },
           editable: true,
-          showAlways: true
+          toolbar: 'halloToolbarFixed'
         })
         .hallo('protectFocusFrom', jQuery('#enable'));
         jQuery('.editable').bind('hallomodified', function(event, data) {
