Some site reorg, add download button

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: "Distraction-free Rich Text Editor for the Web"
 includes_js:
+  - /js/frontpage/domaincheck.js
   - /js/frontpage/editor.js
 vocab: "http://usefulinc.com/ns/doap#" 
 ---
@@ -22,7 +23,15 @@ vocab: "http://usefulinc.com/ns/doap#"
     <p>
     Hallo is not <a href="http://tinymce.moxiecode.com/">TinyMCE</a> or <a href="http://aloha-editor.org/">Aloha Editor</a>. Hallo isn't Microsoft Word, or even Google Docs. It is just the most simple and pleasurable web writing tool imaginable, available to be included into any web application under the liberal MIT open source license.
     </p>
+  </div>
 
+  <div class="download">
+    <a href="/js/hallo.js" class="btn btn-success btn-large">Download 1.0.0</a>
+    <a href="/demo/markdown/" class="btn btn-large">Markdown demo</a>
+    <a href="/demo/annotate/" class="btn btn-large">Annotation demo</a>
+  </div>
+
+  <div class="editable">
     <h2>Developing Hallo</h2>
 
     <p>
