--- a/markdown.html
+++ b/markdown.html
@@ -1,28 +1,8 @@
----
-layout: default
-title: "Editing Markdown in WYSIWYG"
-includes_js:
-  - /js/markdown/showdown.js 
-  - /js/markdown/to-markdown.js 
-  - /js/markdown/editor.js
----
-<article>
-  <div class="editable">
-    <h1>Hallo &mdash; editing Markdown in WYSIWYG</h1>
-
-    <p>
-    <a href="/hallo/">Hallo</a> is the simplest web editor imaginable. Instead of cluttered forms or toolbars, you edit your web content as it is. Just you, your web design, and your content.
-    </p>
-
-    <p>
-    Actually, this text you're reading has Hallo loaded. To try it out, just click here and start writing. If you want to make more comprehensive modifications, just select some text.
-    </p>
-
-    <p>
-    <strong>Note:</strong> you can also edit the Markdown source below
-    </p>
-  </div>
-</article>
-
-<textarea id="source">
-</textarea>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="canonical" href="http://hallojs.org/demo/markdown/"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="refresh" content="0;url=http://hallojs.org/demo/markdown/" />
+  </head>
+</html>
