--- a/examples/test-annotate.html
+++ b/examples/test-annotate.html
@@ -5,10 +5,13 @@
     <link rel="stylesheet" href="hallo.css" />
     <link rel="stylesheet" href="image.css" />
     <link rel="stylesheet" href="fontawesome/css/font-awesome.css" charset="utf-8" />
+<!--[if lt IE 9]>
+    <link rel="stylesheet" href="fontawesome/css/font-awesome-ie7.css" charset="utf-8" />
+<![endif]-->
     <link rel="stylesheet" href="annotate.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js"></script>
-
+	<script src="../deps/rangy-core-1.2.3.js"></script>
     <script src="http://szabyg.github.com/annotate.js/lib/underscore-min.js"></script>
     <script src="http://szabyg.github.com/annotate.js/lib/backbone-min.js"></script>
     <script src="http://szabyg.github.com/annotate.js/lib/jquery.rdfquery.min.js"></script>
