--- a/examples/fixed.html
+++ b/examples/fixed.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="fontawesome/css/font-awesome.css" charset="utf-8" />
     <script src="../deps/jquery-1.7.1.min.js"></script>
     <script src="../deps/jquery-ui-1.8.18.custom.min.js"></script>
+    <script src="../deps/rangy-core-1.2.3.js"></script>
     <script src="hallo.js"></script>
     <title>Hallo example</title>
   </head>
