--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Create.js browser tests</title>
+    <title>Hallo Editor browser tests</title>
 
     <!-- Dependencies -->
     <script src="../deps/jquery-1.7.1.min.js"></script>
