Handle toolbar destruction

--- a/test/index.html
+++ b/test/index.html
@@ -36,6 +36,9 @@
       <div class="hallo-modified">
         <p class="editable"></p>
       </div>
+      <div class="hallo-toolbar">
+        <p class="editable"></p>
+      </div>
     </div>
   </body>
 </html>
