Use jQuery 1.7 on/off instead of bind/unbind

--- a/examples/test.html
+++ b/examples/test.html
@@ -50,16 +50,16 @@
           },
           editable: true
         });
-        jQuery('.editable').bind('hallomodified', function(event, data) {
+        jQuery('.editable').on('hallomodified', function(event, data) {
             jQuery('#modified').html("Editables modified");
         });
-        jQuery('.editable').bind('halloselected', function(event, data) {
+        jQuery('.editable').on('halloselected', function(event, data) {
             jQuery('#modified').html("Selection made");
         });
-        jQuery('.editable').bind('hallounselected', function(event, data) {
+        jQuery('.editable').on('hallounselected', function(event, data) {
             jQuery('#modified').html("Selection removed");
         });
-        jQuery('.editable').bind('hallorestored', function(event, data) {
+        jQuery('.editable').on('hallorestored', function(event, data) {
             jQuery('#modified').html("restored");
         });
       });
