--- a/examples/fixed.html
+++ b/examples/fixed.html
@@ -37,7 +37,7 @@
       </table>
     </div>
 
-    <div class="editable_affix">
+    <div class="editable">
       <h2>Affix Example</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
