--- a/examples/fixed.html
+++ b/examples/fixed.html
@@ -9,8 +9,8 @@
 <!--[if lt IE 9]>
     <link rel="stylesheet" href="fontawesome/css/font-awesome-ie7.css" charset="utf-8" />
 <![endif]-->
-    <script src="../deps/jquery-1.7.1.min.js"></script>
-    <script src="../deps/jquery-ui-1.8.18.custom.min.js"></script>
+    <script src="../deps/jquery-1.9.0.js"></script>
+    <script src="../deps/jquery-ui-1.10.0.custom.js"></script>
     <script src="../deps/rangy-core-1.2.3.js"></script>
     <script src="hallo.js"></script>
     <title>Hallo example</title>
