--- a/examples/test.html
+++ b/examples/test.html
@@ -8,8 +8,8 @@
 <!--[if lt IE 9]>
     <link rel="stylesheet" href="fontawesome/css/font-awesome-ie7.css" charset="utf-8" />
 <![endif]-->
-    <script src="../deps/jquery-1.7.1.min.js"></script>
-    <script src="../deps/jquery-ui-1.8.18.custom.min.js"></script>
+    <script src="../deps/jquery-1.9.0.js"></script>
+    <script src="../deps/jquery-ui-1.10.0.custom.js"></script>
     <script src="../deps/rangy-core-1.2.3.js"></script>
     <script src="hallo.js"></script>
     <title>Hallo example</title>
@@ -45,21 +45,21 @@
             'halloblock': {},
             'hallojustify': {},
             'hallolists': {},
-            'hallolink': {},
+            //'hallolink': {},
             'halloreundo': {}
           },
           editable: true
         });
-        jQuery('.editable').on('hallomodified', function(event, data) {
+        jQuery('.editable').bind('hallomodified', function(event, data) {
             jQuery('#modified').html("Editables modified");
         });
-        jQuery('.editable').on('halloselected', function(event, data) {
+        jQuery('.editable').bind('halloselected', function(event, data) {
             jQuery('#modified').html("Selection made");
         });
-        jQuery('.editable').on('hallounselected', function(event, data) {
+        jQuery('.editable').bind('hallounselected', function(event, data) {
             jQuery('#modified').html("Selection removed");
         });
-        jQuery('.editable').on('hallorestored', function(event, data) {
+        jQuery('.editable').bind('hallorestored', function(event, data) {
             jQuery('#modified').html("restored");
         });
       });
