Link to changelog

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@ vocab: "http://usefulinc.com/ns/doap#"
 
   <div class="download">
     <a href="/js/hallo.js" class="btn btn-success btn-large">Download 1.0.2</a>
+    <a href="https://github.com/bergie/hallo/blob/master/CHANGES.md" class="btn btn-large">ChangeLog</a>
     <a href="/demo/markdown/" class="btn btn-large">Markdown demo</a>
-    <a href="/demo/annotate/" class="btn btn-large">Annotation demo</a>
   </div>
 
   <div class="editable">
     <h2>Developing Hallo</h2>
 
     <p>
-    Hallo is still in the early stages of its life and not quite yet ready for real-world use. If you're interested in contributing, simply fork the <a href="https://github.com/bergie/hallo">Hallo repository on GitHub</a> and send <a href="http://help.github.com/pull-requests/">pull requests</a>. Make sure to check out the <a href="https://github.com/bergie/hallo/issues" rel="bug-database">current list of issues</a>.
+    If you're interested in contributing, simply fork the <a href="https://github.com/bergie/hallo">Hallo repository on GitHub</a> and send <a href="http://help.github.com/pull-requests/">pull requests</a>. Make sure to check out the <a href="https://github.com/bergie/hallo/issues" rel="bug-database">current list of issues</a>.
     </p>
 
     <p>
