Update to latest jQuery and UI

--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,8 @@
     <title>Hallo Editor browser tests</title>
 
     <!-- Dependencies -->
-    <script src="../deps/jquery-1.7.1.min.js"></script>
-    <script src="../deps/jquery-ui-1.8.18.custom.min.js"></script>
+    <script src="../deps/jquery-1.9.1.min.js"></script>
+    <script src="../deps/jquery-ui-1.10.2.min.js"></script>
     <script src="../deps/rangy-core-1.2.3.js"></script>
     <script src="../examples/hallo.js"></script>
 
