--- a/examples/test-annotate.html
+++ b/examples/test-annotate.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="fontawesome/css/font-awesome-ie7.css" charset="utf-8" />
 <![endif]-->
     <link rel="stylesheet" href="annotate.css" />
-    <script src="../deps/jquery-1.9.0.js"></script>
-    <script src="../deps/jquery-ui-1.10.0.custom.js"></script>
-	<script src="../deps/rangy-core-1.2.3.js"></script>
+    <script src="../deps/jquery-1.9.1.min.js"></script>
+    <script src="../deps/jquery-ui-1.10.2.min.js"></script>
+    <script src="../deps/rangy-core-1.2.3.js"></script>
     <script src="http://szabyg.github.com/annotate.js/lib/underscore-min.js"></script>
     <script src="http://szabyg.github.com/annotate.js/lib/backbone-min.js"></script>
     <script src="http://szabyg.github.com/annotate.js/lib/jquery.rdfquery.min.js"></script>
