--- a/examples/whitelist.html
+++ b/examples/whitelist.html
@@ -8,8 +8,8 @@
 <!--[if lt IE 9]>
     <link rel="stylesheet" href="fontawesome/css/font-awesome-ie7.css" charset="utf-8" />
 <![endif]-->
-    <script src="../deps/jquery-1.9.0.js"></script>
-    <script src="../deps/jquery-ui-1.10.0.custom.js"></script>
+    <script src="../deps/jquery-1.9.1.min.js"></script>
+    <script src="../deps/jquery-ui-1.10.2.min.js"></script>
     <script src="../deps/jquery.htmlClean.js"></script>
     <script src="../deps/rangy-core-1.2.3.js"></script>
     <script src="../deps/rangy-selectionsaverestore.js"></script>
