fixed path to example dependencies

--- a/examples/test-annotate.html
+++ b/examples/test-annotate.html
@@ -12,12 +12,12 @@
     <script src="../deps/jquery-1.9.1.min.js"></script>
     <script src="../deps/jquery-ui-1.10.2.min.js"></script>
     <script src="../deps/rangy-core-1.2.3.js"></script>
-    <script src="http://szabyg.github.com/annotate.js/lib/underscore-min.js"></script>
-    <script src="http://szabyg.github.com/annotate.js/lib/backbone-min.js"></script>
-    <script src="http://szabyg.github.com/annotate.js/lib/jquery.rdfquery.min.js"></script>
+    <script src="http://szabyg.github.io/annotate.js/lib/underscore-min.js"></script>
+    <script src="http://szabyg.github.io/annotate.js/lib/backboneJS/backbone.js"></script>
+    <script src="http://szabyg.github.io/annotate.js/lib/jquery.rdfquery.min.js"></script>
 
-    <script src="http://szabyg.github.com/annotate.js/lib/vie/vie-latest.js"></script>
-    <script src="http://szabyg.github.com/annotate.js/lib/annotate.js"></script>
+    <script src="http://szabyg.github.io/annotate.js/lib/vie/vie.js"></script>
+    <script src="http://szabyg.github.io/annotate.js/lib/annotate.js"></script>
 
     <script src="hallo.js"></script>
 
