renamed to float plugin, better to keep it small and focused

--- a/examples/images-edit.html
+++ b/examples/images-edit.html
@@ -53,7 +53,7 @@
           plugins: {
             'halloformat': {},
             'hallojustify': {},
-            'hallo-image-edit': {}
+            'hallo-image-float': {}
           }
         });
 
