image size plugin

--- a/examples/images-edit.html
+++ b/examples/images-edit.html
@@ -53,7 +53,8 @@
           plugins: {
             'halloformat': {},
             'hallojustify': {},
-            'hallo-image-float': {}
+            'hallo-image-float': {},
+            'hallo-image-size': {}
           }
         });
 
