extracted image-select plugin to avoid duplication of code

--- a/examples/images-edit.html
+++ b/examples/images-edit.html
@@ -53,6 +53,7 @@
           plugins: {
             'halloformat': {},
             'hallojustify': {},
+            'hallo-image-select': {},
             'hallo-image-float': {},
             'hallo-image-size': {}
           }
