created simple plugin which inserts an image from an url

--- a/examples/images-edit.html
+++ b/examples/images-edit.html
@@ -55,7 +55,8 @@
             'hallojustify': {},
             'hallo-image-select': {},
             'hallo-image-float': {},
-            'hallo-image-size': {}
+            'hallo-image-size': {},
+            'hallo-image-insert-url': {}
           }
         });
 
