--- a/examples/images-edit.html
+++ b/examples/images-edit.html
@@ -28,6 +28,7 @@
       <p>
         Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
       </p>
+       <img src="http://farm1.staticflickr.com/42/117674694_6dd1d296d7.jpg" />
     </div>
 
     <script>
