created basic filebrowser

--- a/examples/images-edit.html
+++ b/examples/images-edit.html
@@ -57,7 +57,10 @@
             'hallo-image-select': {},
             'hallo-image-float': {},
             'hallo-image-size': {},
-            'hallo-image-insert-url': {}
+            'hallo-image-insert-url': {},
+            'hallo-image-browser': {
+                searchurl : "image-edit.json"
+            }
           }
         });
 
