--- a/examples/images-edit.html
+++ b/examples/images-edit.html
@@ -25,11 +25,16 @@
         tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
         quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
       </p>
-      <img src="http://farm4.staticflickr.com/3139/2780642603_8d2c90e364.jpg" />
+      <img src="http://farm4.staticflickr.com/3139/2780642603_8d2c90e364.jpg" style="width: 328.5px; height: 197.1px;">
       <p>
         Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
       </p>
-       <img src="http://farm1.staticflickr.com/42/117674694_6dd1d296d7.jpg" />
+      <img src="http://farm1.staticflickr.com/42/117674694_6dd1d296d7.jpg" style="width: 180px; height: 239.4px;">
+    </div>
+
+    <div class="editable">
+      <p>Second editable</p>
+      <img src="http://farm4.staticflickr.com/3139/2780642603_8d2c90e364.jpg" style="width: 328.5px; height: 197.1px;">
     </div>
 
     <script>
