clear br editors, prevent overlapping

--- a/examples/images-edit.html
+++ b/examples/images-edit.html
@@ -32,6 +32,8 @@
       <img src="http://farm1.staticflickr.com/42/117674694_6dd1d296d7.jpg" style="width: 180px; height: 239.4px;">
     </div>
 
+    <br style="clear:both" />
+
     <div class="editable">
       <p>Second editable</p>
       <img src="http://farm4.staticflickr.com/3139/2780642603_8d2c90e364.jpg" style="width: 328.5px; height: 197.1px;">
